oxiplate/tests/broken/extends/extends-non-existent.stderr
error: couldn't read `$DIR/templates/extends-non-existent.html.oxip`: No such file or directory (os error 2)
 --> tests/broken/extends/extends-non-existent.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^

error: Must provide either an external or internal template:
       External: #[oxiplate = "/path/to/template/from/templates/directory.txt.oxip"]
       Internal: #[oxiplate_inline(html: "{{ your_var }}")]
 --> tests/broken/extends/extends-non-existent.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
